kubernetes/catalog/shiori/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shiori
  namespace: shiori
  labels:
    app.kubernetes.io/name: shiori
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shiori.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: shiori
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik
